--- a/index.html
+++ b/index.html
@@ -1,20 +1,84 @@
 <!DOCTYPE html>
 <html>
 	<meta charset="UTF-8">
-	<meta name="google-site-verification" content="jHKw929ceLZ1wCOVfL63R4pESC7MPyJ7yOGIjlHtc8c">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kadeřnictví Lena</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 	<!-- Google tag (gtag.js) -->
+	<meta name="google-site-verification" content="jHKw929ceLZ1wCOVfL63R4pESC7MPyJ7yOGIjlHtc8c">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-73RCR5BDD6"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 	  function gtag(){dataLayer.push(arguments);}
 	  gtag('js', new Date());
 	  gtag('config', 'G-73RCR5BDD6');</script>
 <head>
-	<title>Kadeřnictví Lena &#8211; nadstandartní péče o vás i vaše vlasy</title>
-</head>
-<body>
-	<img src="media/img.png" alt="logo" class="logo">
-</body>
-<footer>
-	<p>© 2024 Kadeřnictví Lena</p>
-</footer>
+	<body>
+		<header class="main-header">
+			<div class="left-side">
+				<div class="logo-container">
+					<img src="img/logo.png" alt="Logo kadeřnictví Lena">
+					<div class="logo-text">
+						<p class="logo-title">Kadeřnictví Lena</p>
+						<p class="logo-subtitle">styl a péče</p>
+					</div>
+				</div>
+			</div>
+			<div class="right-side">
+				<nav>
+					<ul>
+						<li><a href="index.html">Domů</a></li>
+						<li><a href="prices.html">Ceník</a></li>
+						<li><a href="gallery.html">Galerie</a></li>
+						<li><a href="contact.html">Kontakt</a></li>
+					</ul>
+				</nav>
+			</div>
+		</header>
+		<main>
+			<div class="content-wrap">
+				<div class="content">
+					<div class="interduciton">
+						<div class="left-text">
+							<p> Vaše vlasy jsou pro mě jako umělecké dílo, a já se těším, že vám pomohu najít ten správný vzhled, který vás bude odrážet. Jmenuji se Lenka a jsem váš osobní kadeřník. Moje vášeň pro kreativitu a krásu se odráží ve všem, co dělám.</p>
+							<p>V kadeřnictví Lena vám nabízím individuální péči, kde se zaměřuji na každého klienta osobně. Bez ohledu na to, jestli jste tu pro klasický střih, odvážnou změnu nebo jemný dotek elegance, budu naslouchat vašim přáním a společně najdeme ten správný styl, který vám padne.</p>
+							<p>Díky mému profesionálnímu přístupu a dlouholetým zkušenostem v oboru vám mohu garantovat kvalitní služby včetně střihů, barvení, úprav a stylingu vlasů. Ať už jste muž, žena nebo dítě, jsem tu, abych vám pomohla vytvořit vzhled, který vám dává sebevědomí a radost.</p>
+							<p>Navštivte mě v mém útulném salonu a nechte se hýčkat profesionální péčí. Vaše spokojenost je pro mě prioritou, a udělám vše pro to, abyste odcházeli s úsměvem na tváři a s vlasy, které vám připadají jako dokonalé.</p>
+							<p>Pro domluvení termínu nebo další informace mě neváhejte kontaktovat. Těším se na setkání s vámi a na to, že vám pomůžu objevit váš jedinečný styl.</p>
+							<div class="signature">
+								<img id="sign_1" src="img/sign_1.png" alt="Lenka">
+								<img id="sign_2" src="img/sign_2.png" alt="Zollmanová">
+							</div>
+						</div>
+						<div class="right-image">
+							<img src="img/lenka.jpg" alt="Lenka - majitelka kadeřnictví">
+						</div>
+					</div>
+					<div class="logos">
+						<div class="main-logo">
+							<img src="img/logo_1.webp" alt="Wella">
+						</div>
+						<div class="side-logos">
+							<img src="img/logo_2.png" alt="Insight">
+							<img src="img/logo_3.png" alt="Farouk">
+							<img src="img/logo_4.jpg" alt="Envité">
+							<img src="img/logo_5.jpg" alt="bondaplex">
+							<img src="img/logo_6.png" alt="revlon">
+							<img src="img/logo_7.png" alt="loreal">
+						</div>
+					</div>
+					<div class="review">
+						<script src="https://static.elfsight.com/platform/platform.js" async></script>
+						<div class="elfsight-app-ec6621f7-1150-4c60-85ea-c22bcc914b9d" data-elfsight-app-lazy></div>
+					</div>
+				</div>
+			</div>
+		</main>
+		<footer>
+			<p>&copy; 2025 Kadeřnictví Lena. Všechna práva vyhrazena.</p>
+		</footer>
+	</body>
 </html>
