--- a/index.html
+++ b/index.html
@@ -20,20 +20,18 @@
 		<header class="main-header">
 			<div class="left-side">
 				<div class="logo-container">
-					<img src="img/logo.png" alt="Logo kadeřnictví Lena">
-					<div class="logo-text">
-						<p class="logo-title">Kadeřnictví Lena</p>
-						<p class="logo-subtitle">styl a péče</p>
-					</div>
+					<img src="img/lena_logo.png" alt="Logo kadeřnictví Lena">
 				</div>
+				<div class="cross"><img src="img/cross.svg" alt="" id="cross"></div>
 			</div>
 			<div class="right-side">
+				<div class="ham"><img src="img/ham.svg" alt="" id="ham"></div>
 				<nav>
 					<ul>
-						<li><a href="index.html">Domů</a></li>
-						<li><a href="prices.html">Ceník</a></li>
-						<li><a href="gallery.html">Galerie</a></li>
-						<li><a href="contact.html">Kontakt</a></li>
+						<li class="navbar"><a href="index.html">Domů</a></li>
+						<li class="navbar"><a href="prices.html">Ceník</a></li>
+						<li class="navbar"><a href="gallery.html">Galerie</a></li>
+						<li class="navbar"><a href="contact.html">Kontakt</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -70,10 +68,133 @@
 							<img src="img/logo_7.png" alt="loreal">
 						</div>
 					</div>
-					<div class="review">
-						<script src="https://static.elfsight.com/platform/platform.js" async></script>
-						<div class="elfsight-app-ec6621f7-1150-4c60-85ea-c22bcc914b9d" data-elfsight-app-lazy></div>
+					<div class="review-container">
+						<img src="img/arrow.svg" alt="right arrow" id="left-button">
+						<div class="review snap-inline">
+							<div class="review-card">
+								<div class="review-card-header">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<div class="review-card-details">
+										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-date">12 Únor 2024</div>
+									</div>
+									<img src="img/google.svg" alt="google">
+								</div>
+								<div class="review-card-stars">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+								</div> 
+								<div class="review-card-text">
+									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+								</div>
+							</div>
+							<div class="review-card">
+								<div class="review-card-header">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<div class="review-card-details">
+										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-date">12 Únor 2024</div>
+									</div>
+									<img src="img/google.svg" alt="google">
+								</div>
+								<div class="review-card-stars">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+								</div> 
+								<div class="review-card-text">
+									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+								</div>
+							</div>
+							<div class="review-card">
+								<div class="review-card-header">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<div class="review-card-details">
+										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-date">12 Únor 2024</div>
+									</div>
+									<img src="img/google.svg" alt="google">
+								</div>
+								<div class="review-card-stars">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+								</div> 
+								<div class="review-card-text">
+									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+								</div>
+							</div>
+							<div class="review-card">
+								<div class="review-card-header">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<div class="review-card-details">
+										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-date">12 Únor 2024</div>
+									</div>
+									<img src="img/google.svg" alt="google">
+								</div>
+								<div class="review-card-stars">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+								</div> 
+								<div class="review-card-text">
+									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+								</div>
+							</div>
+							<div class="review-card">
+								<div class="review-card-header">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<div class="review-card-details">
+										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-date">12 Únor 2024</div>
+									</div>
+									<img src="img/google.svg" alt="google">
+								</div>
+								<div class="review-card-stars">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+								</div> 
+								<div class="review-card-text">
+									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+								</div>
+							</div>
+							<div class="review-card">
+								<div class="review-card-header">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<div class="review-card-details">
+										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-date">12 Únor 2024</div>
+									</div>
+									<img src="img/google.svg" alt="google">
+								</div>
+								<div class="review-card-stars">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+									<img src="img/star.svg" alt="star">
+								</div> 
+								<div class="review-card-text">
+									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+								</div>
+							</div>
+						</div>
+						<img src="img/arrow.svg" alt="right arrow" id="right-button">
 					</div>
+					<div class="review-google-text"><b>Google</b> – souhrnné hodnocení <b>5.0</b> z 5,na základě <b>16 hodnocení</b></div>
 				</div>
 			</div>
 		</main>
@@ -81,4 +202,39 @@
 			<p>&copy; 2025 Kadeřnictví Lena. Všechna práva vyhrazena.</p>
 		</footer>
 	</body>
+	<script>
+		document.getElementById('left-button').addEventListener('click', function() {
+			document.querySelector('.review').scrollBy({
+				left: -300,
+				behavior: 'smooth'
+			});
+		});
+	
+		document.getElementById('right-button').addEventListener('click', function() {
+			document.querySelector('.review').scrollBy({
+				left: 300,
+				behavior: 'smooth'
+			});
+		});
+		document.getElementById('ham').addEventListener('click', function() {
+			const menu = document.querySelector('.right-side ul');
+				menu.style.display = 'flex';
+			const ham = document.querySelector('.ham');
+				ham.style.display = 'none';
+			const header = document.querySelector('.main-header');
+			header.style.flexDirection = 'column';
+			const cross = document.querySelector('.cross');
+			cross.style.display = 'block';
+		});
+		document.getElementById('cross').addEventListener('click', function() {
+			const menu = document.querySelector('.right-side ul');
+				menu.style.display = 'none';
+			const ham = document.querySelector('.ham');
+				ham.style.display = 'block';
+			const header = document.querySelector('.main-header');
+			header.style.flexDirection = 'row';
+			const cross = document.querySelector('.cross');
+			cross.style.display = 'none';
+		});
+	</script>
 </html>
