edit contact and main page reviews

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<div class="review-container">
 						<img src="img/arrow.svg" alt="right arrow" id="left-button">
 						<div class="review snap-inline">
-							<div class="review-card">
+							<div class="review-card"> <!-- 1.Review -->
 								<div class="review-card-header">
 									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
 									<div class="review-card-details">
@@ -84,11 +84,11 @@
 									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
 								</div>
 							</div>
-							<div class="review-card">
+							<div class="review-card"> <!-- 2.Review -->
 								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocKFWVF9J7gK82Uqg0FZwk_ue_jmxmauW0IA3kK4P3BcovaMMw=s120-c-rp-mo-br100" alt="Marketa Duringerova">
 									<div class="review-card-details">
-										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-name"> Marketa Duringerova </div>
 										<div class="review-card-date">12 Únor 2024</div>
 									</div>
 									<img src="img/google.svg" alt="google">
@@ -101,14 +101,14 @@
 									<img src="img/star.svg" alt="star">
 								</div> 
 								<div class="review-card-text">
-									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+									<p>Paní Lenka má velice šikovné ruce, opravdový profesionál,navíc je její kadeřnictví velice příjemné prostředí.</p>
 								</div>
 							</div>
-							<div class="review-card">
+							<div class="review-card"> <!-- 3.Review -->
 								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJEH858NnKgIz6VMZRrYcK1MQvNNZd8yHIQbAkoeMB-vks1Ag=s120-c-rp-mo-br100" alt="Pavla Matlova">
 									<div class="review-card-details">
-										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-name"> Eva Chovancová </div>
 										<div class="review-card-date">12 Únor 2024</div>
 									</div>
 									<img src="img/google.svg" alt="google">
@@ -121,14 +121,14 @@
 									<img src="img/star.svg" alt="star">
 								</div> 
 								<div class="review-card-text">
-									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+									<p>Paní Lenka je prostě profík. Vždy od ní odcházím spokojená a odpočatá. Mám ráda změny a tady to není žádný problém. Barvy jsou krásné a lesklé a střihů už jsem také zkusila více a vždy super. Navíc prostředí je velmi příjemné a útulné...</p>
 								</div>
 							</div>
-							<div class="review-card">
+							<div class="review-card"> <!-- 4.Review -->
 								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocKR33QhO0Iqd4HajywdoBjBOJ6aea7NDxJ5DtrOELbhPlFGcg=s120-c-rp-mo-br100" alt="Pavla Matlova">
 									<div class="review-card-details">
-										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-name"> Pavla Matlova </div>
 										<div class="review-card-date">12 Únor 2024</div>
 									</div>
 									<img src="img/google.svg" alt="google">
@@ -141,14 +141,14 @@
 									<img src="img/star.svg" alt="star">
 								</div> 
 								<div class="review-card-text">
-									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+									<p>Lenku mohu jen doporučit. Vždy odcházím spokojená s účesem, odpočatá.</p>
 								</div>
 							</div>
-							<div class="review-card">
+							<div class="review-card"> <!-- 5.Review -->
 								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a-/ALV-UjU-yxDmsD5Zu9GZFetRtnLgiRJtweyaoa9MZ-_7YFVRV_D1qNhceg=s120-c-rp-mo-br100" alt="Natálie Komárková">
 									<div class="review-card-details">
-										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-name"> Natálie Komárková </div>
 										<div class="review-card-date">12 Únor 2024</div>
 									</div>
 									<img src="img/google.svg" alt="google">
@@ -161,14 +161,14 @@
 									<img src="img/star.svg" alt="star">
 								</div> 
 								<div class="review-card-text">
-									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+									<p>Prostě úžasné! Přišla jsem s totálně zničenými vlasy a odešla s krásně hebkými, lesklými vlasy bez roztřepených konečků. Po více návštěvách jsou moje vlasy zdravější a delší. Nemůžu vynachválit moc moc doporučuji!!🥰</p>
 								</div>
 							</div>
-							<div class="review-card">
+							<div class="review-card"> <!-- 6.Review -->
 								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocLcr8M-qCsW53bo8Sn4tpXaVodK5JWhuZMa3Np9zTd2Z2l2Nw=s120-c-rp-mo-ba3-br100" alt="Lucie Slavičková">
 									<div class="review-card-details">
-										<div class="review-card-name"> Martina Fialová </div>
+										<div class="review-card-name"> Lucie Slavičková </div>
 										<div class="review-card-date">12 Únor 2024</div>
 									</div>
 									<img src="img/google.svg" alt="google">
@@ -181,7 +181,7 @@
 									<img src="img/star.svg" alt="star">
 								</div> 
 								<div class="review-card-text">
-									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+									<p>Jsem velmi spokojená. Perfektní melír a střih za příjemnou cenu. Navíc krásně vyfoukané, vlasy dostaly šmrnc a vydrželi několik dní hezké. Doma si to takto nikdy neumím vyfoukat do hladka. Určitě doporučuji!</p>
 								</div>
 							</div>
 						</div>
