change photo, add prices,gallery

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+	<!-- Google tag (gtag.js) -->
+	<meta name="google-site-verification" content="jHKw929ceLZ1wCOVfL63R4pESC7MPyJ7yOGIjlHtc8c">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-73RCR5BDD6"></script>
+	<script>window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'G-73RCR5BDD6');</script>
+	<!-- /Google tag -->
 <head>
 	<body>
 		<header class="main-header">
@@ -34,18 +42,17 @@
 				<div class="content">
 					<div class="interduciton">
 						<div class="left-text">
-							<p> Vaše vlasy jsou pro mě jako umělecké dílo, a já se těším, že vám pomohu najít ten správný vzhled, který vás bude odrážet. Jmenuji se Lenka a jsem váš osobní kadeřník. Moje vášeň pro kreativitu a krásu se odráží ve všem, co dělám.</p>
-							<p>V kadeřnictví Lena vám nabízím individuální péči, kde se zaměřuji na každého klienta osobně. Bez ohledu na to, jestli jste tu pro klasický střih, odvážnou změnu nebo jemný dotek elegance, budu naslouchat vašim přáním a společně najdeme ten správný styl, který vám padne.</p>
-							<p>Díky mému profesionálnímu přístupu a dlouholetým zkušenostem v oboru vám mohu garantovat kvalitní služby včetně střihů, barvení, úprav a stylingu vlasů. Ať už jste muž, žena nebo dítě, jsem tu, abych vám pomohla vytvořit vzhled, který vám dává sebevědomí a radost.</p>
-							<p>Navštivte mě v mém útulném salonu a nechte se hýčkat profesionální péčí. Vaše spokojenost je pro mě prioritou, a udělám vše pro to, abyste odcházeli s úsměvem na tváři a s vlasy, které vám připadají jako dokonalé.</p>
-							<p>Pro domluvení termínu nebo další informace mě neváhejte kontaktovat. Těším se na setkání s vámi a na to, že vám pomůžu objevit váš jedinečný styl.</p>
+							<h2>Vítejte v kadeřnictví LENA</h1>
+							<p>Jmenuji se Lenka a s více než 15 lety zkušeností v oboru nabízím profesionální kadeřnické služby pro ženy, muže i děti. Specializuji se na moderní střihy, techniky barvení a styling, přičemž kladu důraz na kvalitu a zdraví vašich vlasů. Mým cílem je vytvořit účes, který podtrhne vaši osobnost a ve kterém se budete cítit skvěle.</p>
+							<p>V příjemném prostředí mého salonu se můžete těšit na individuální přístup a péči šitou na míru vašim potřebám. Používám inovativní a kvalitní produkty značek Wella, Insight a dalších, které zajišťují šetrnou péči o vaše vlasy.</p>
+							<p>Těším se na vaši návštěvu a společně najdeme ten pravý styl pro vás.</p>
 							<div class="signature">
 								<img id="sign_1" src="img/sign_1.png" alt="Lenka">
 								<img id="sign_2" src="img/sign_2.png" alt="Zollmanová">
 							</div>
 						</div>
 						<div class="right-image">
-							<img src="img/lenka.jpg" alt="Lenka - majitelka kadeřnictví">
+							<img src="img/lenka.png" alt="Lenka - majitelka kadeřnictví">
 						</div>
 					</div>
 					<div class="logos">
