--- a/index.html
+++ b/index.html
@@ -29,15 +29,18 @@
 				<div class="ham"><img src="img/ham.svg" alt="" id="ham"></div>
 				<nav>
 					<ul>
-						<li class="navbar"><a href="index.html">Domů</a></li>
-						<li class="navbar"><a href="prices.html">Ceník</a></li>
+						<li class="navbar"><a href="#" onclick="document.querySelector('.main-header').scrollIntoView({ behavior: 'smooth' });">Domů</a></li>
+						<li class="navbar"><a href="#" onclick="document.querySelector('.cenik').scrollIntoView({ behavior: 'smooth' });">Ceník</a></li>
 						<li class="navbar"><a href="gallery.html">Galerie</a></li>
-						<li class="navbar"><a href="contact.html">Kontakt</a></li>
+						<li class="navbar"><a href="#" onclick="document.querySelector('.contact').scrollIntoView({ behavior: 'smooth' });">Kontakt</a></li>
 					</ul>
 				</nav>
 			</div>
 		</header>
 		<main>
+
+
+
 			<div class="content-wrap">
 				<div class="content">
 					<div class="interduciton">
@@ -55,6 +58,8 @@
 							<img src="img/lenka.png" alt="Lenka - majitelka kadeřnictví">
 						</div>
 					</div>
+
+
 					<div class="logos">
 						<div class="main-logo">
 							<img src="img/logo_1.webp" alt="Wella">
@@ -68,133 +73,264 @@
 							<img src="img/logo_7.png" alt="loreal">
 						</div>
 					</div>
-					<div class="review-container">
-						<img src="img/arrow.svg" alt="right arrow" id="left-button">
-						<div class="review snap-inline">
-							<div class="review-card"> <!-- 1.Review -->
-								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
-									<div class="review-card-details">
-										<div class="review-card-name"> Martina Fialová </div>
-										<div class="review-card-date">12 Únor 2024</div>
-									</div>
-									<img src="img/google.svg" alt="google">
-								</div>
-								<div class="review-card-stars">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-								</div> 
-								<div class="review-card-text">
-									<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
-								</div>
-							</div>
-							<div class="review-card"> <!-- 2.Review -->
-								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocKFWVF9J7gK82Uqg0FZwk_ue_jmxmauW0IA3kK4P3BcovaMMw=s120-c-rp-mo-br100" alt="Marketa Duringerova">
-									<div class="review-card-details">
-										<div class="review-card-name"> Marketa Duringerova </div>
-										<div class="review-card-date">12 Únor 2024</div>
-									</div>
-									<img src="img/google.svg" alt="google">
-								</div>
-								<div class="review-card-stars">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-								</div> 
-								<div class="review-card-text">
-									<p>Paní Lenka má velice šikovné ruce, opravdový profesionál,navíc je její kadeřnictví velice příjemné prostředí.</p>
-								</div>
-							</div>
-							<div class="review-card"> <!-- 3.Review -->
-								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJEH858NnKgIz6VMZRrYcK1MQvNNZd8yHIQbAkoeMB-vks1Ag=s120-c-rp-mo-br100" alt="Pavla Matlova">
-									<div class="review-card-details">
-										<div class="review-card-name"> Eva Chovancová </div>
-										<div class="review-card-date">12 Únor 2024</div>
-									</div>
-									<img src="img/google.svg" alt="google">
-								</div>
-								<div class="review-card-stars">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-								</div> 
-								<div class="review-card-text">
-									<p>Paní Lenka je prostě profík. Vždy od ní odcházím spokojená a odpočatá. Mám ráda změny a tady to není žádný problém. Barvy jsou krásné a lesklé a střihů už jsem také zkusila více a vždy super. Navíc prostředí je velmi příjemné a útulné...</p>
-								</div>
-							</div>
-							<div class="review-card"> <!-- 4.Review -->
-								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocKR33QhO0Iqd4HajywdoBjBOJ6aea7NDxJ5DtrOELbhPlFGcg=s120-c-rp-mo-br100" alt="Pavla Matlova">
-									<div class="review-card-details">
-										<div class="review-card-name"> Pavla Matlova </div>
-										<div class="review-card-date">12 Únor 2024</div>
-									</div>
-									<img src="img/google.svg" alt="google">
-								</div>
-								<div class="review-card-stars">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-								</div> 
-								<div class="review-card-text">
-									<p>Lenku mohu jen doporučit. Vždy odcházím spokojená s účesem, odpočatá.</p>
-								</div>
-							</div>
-							<div class="review-card"> <!-- 5.Review -->
-								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a-/ALV-UjU-yxDmsD5Zu9GZFetRtnLgiRJtweyaoa9MZ-_7YFVRV_D1qNhceg=s120-c-rp-mo-br100" alt="Natálie Komárková">
-									<div class="review-card-details">
-										<div class="review-card-name"> Natálie Komárková </div>
-										<div class="review-card-date">12 Únor 2024</div>
-									</div>
-									<img src="img/google.svg" alt="google">
-								</div>
-								<div class="review-card-stars">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-								</div> 
-								<div class="review-card-text">
-									<p>Prostě úžasné! Přišla jsem s totálně zničenými vlasy a odešla s krásně hebkými, lesklými vlasy bez roztřepených konečků. Po více návštěvách jsou moje vlasy zdravější a delší. Nemůžu vynachválit moc moc doporučuji!!🥰</p>
-								</div>
-							</div>
-							<div class="review-card"> <!-- 6.Review -->
-								<div class="review-card-header">
-									<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocLcr8M-qCsW53bo8Sn4tpXaVodK5JWhuZMa3Np9zTd2Z2l2Nw=s120-c-rp-mo-ba3-br100" alt="Lucie Slavičková">
-									<div class="review-card-details">
-										<div class="review-card-name"> Lucie Slavičková </div>
-										<div class="review-card-date">12 Únor 2024</div>
-									</div>
-									<img src="img/google.svg" alt="google">
-								</div>
-								<div class="review-card-stars">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-									<img src="img/star.svg" alt="star">
-								</div> 
-								<div class="review-card-text">
-									<p>Jsem velmi spokojená. Perfektní melír a střih za příjemnou cenu. Navíc krásně vyfoukané, vlasy dostaly šmrnc a vydrželi několik dní hezké. Doma si to takto nikdy neumím vyfoukat do hladka. Určitě doporučuji!</p>
-								</div>
-							</div>
+
+
+					<div class="cenik">
+						<table>
+							<tbody>
+								<tr>
+									<td>
+										<strong>Základní služby</strong>
+									</td>
+									<td>
+										<strong>Krátké</strong>
+									</td>
+									<td>
+										<strong>Dlouhé</strong>
+									</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Mytí, foukání</td>
+									<td>300,-</td>
+									<td>500,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Střih, mytí, foukání</td>
+									<td>400,-</td>
+									<td>600,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Barva, střih, foukaná</td>
+									<td>800,-</td>
+									<td>1200,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Melír, střih, foukaná</td>
+									<td>900,-</td>
+									<td>1500,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Tónování</td>
+									<td>od 300,-</td>
+									<td>od 400,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Balayage, střih, foukaná</td>
+									<td>1500,-</td>
+									<td>2600,-</td>
+								</tr>
+							</tbody>
+						</table>
+						<table>
+							<tbody>
+								<tr>
+									<td>
+										<strong>Ostatní služby v salónu</strong>
+									</td>
+									<td>
+										<strong>Krátké</strong>
+									</td>
+									<td>
+										<strong>Dlouhé</strong>
+									</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Masáž hlavy</td>
+									<td>550,-</td>
+									<td>550,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Bondaplex terapie</td>
+									<td>600,-</td>
+									<td>900,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Regenerační zábal, laminace</td>
+									<td>600,-</td>
+									<td>1400,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Přidání Bondaplexu do barvy, melíru atd.</td>
+									<td>od 200,-</td>
+									<td>od 300,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Pánský střih</td>
+									<td>300,-</td>
+									<td>300,-</td>
+								</tr>
+								<tr>
+									<td class="has-text-align-left">Dětský střih do 15 let</td>
+									<td>200,-</td>
+									<td>200,-</td>
+								</tr>
+							</tbody>
+						</table>
 						</div>
-						<img src="img/arrow.svg" alt="right arrow" id="right-button">
-					</div>
-					<div class="review-google-text"><b>Google</b> – souhrnné hodnocení <b>5.0</b> z 5,na základě <b>16 hodnocení</b></div>
+
+
+
+						<div class="review-container">
+							<img src="img/arrow.svg" alt="right arrow" id="left-button">
+							<div class="review snap-inline">
+								<div class="review-card"> <!-- 1.Review -->
+									<div class="review-card-header">
+										<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJIaI2ahPfnE34ZM38VkkiXsaJs6SCXlMcoE6ffxL_bimu4bw=s120-c-rp-mo-ba4-br100" alt="Martina Fialová">
+										<div class="review-card-details">
+											<div class="review-card-name"> Martina Fialová </div>
+											<div class="review-card-date">12 Únor 2024</div>
+										</div>
+										<img src="img/google.svg" alt="google">
+									</div>
+									<div class="review-card-stars">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+									</div> 
+									<div class="review-card-text">
+										<p>Šikovná a milá paní kadeřnice, která ráda a dobře poradí, příjemné prostředí a skvělé ceny 😀</p>
+									</div>
+								</div>
+								<div class="review-card"> <!-- 2.Review -->
+									<div class="review-card-header">
+										<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocKFWVF9J7gK82Uqg0FZwk_ue_jmxmauW0IA3kK4P3BcovaMMw=s120-c-rp-mo-br100" alt="Marketa Duringerova">
+										<div class="review-card-details">
+											<div class="review-card-name"> Marketa Duringerova </div>
+											<div class="review-card-date">12 Únor 2024</div>
+										</div>
+										<img src="img/google.svg" alt="google">
+									</div>
+									<div class="review-card-stars">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+									</div> 
+									<div class="review-card-text">
+										<p>Paní Lenka má velice šikovné ruce, opravdový profesionál,navíc je její kadeřnictví velice příjemné prostředí.</p>
+									</div>
+								</div>
+								<div class="review-card"> <!-- 3.Review -->
+									<div class="review-card-header">
+										<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocJEH858NnKgIz6VMZRrYcK1MQvNNZd8yHIQbAkoeMB-vks1Ag=s120-c-rp-mo-br100" alt="Pavla Matlova">
+										<div class="review-card-details">
+											<div class="review-card-name"> Eva Chovancová </div>
+											<div class="review-card-date">12 Únor 2024</div>
+										</div>
+										<img src="img/google.svg" alt="google">
+									</div>
+									<div class="review-card-stars">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+									</div> 
+									<div class="review-card-text">
+										<p>Paní Lenka je prostě profík. Vždy od ní odcházím spokojená a odpočatá. Mám ráda změny a tady to není žádný problém. Barvy jsou krásné a lesklé a střihů už jsem také zkusila více a vždy super. Navíc prostředí je velmi příjemné a útulné...</p>
+									</div>
+								</div>
+								<div class="review-card"> <!-- 4.Review -->
+									<div class="review-card-header">
+										<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocKR33QhO0Iqd4HajywdoBjBOJ6aea7NDxJ5DtrOELbhPlFGcg=s120-c-rp-mo-br100" alt="Pavla Matlova">
+										<div class="review-card-details">
+											<div class="review-card-name"> Pavla Matlova </div>
+											<div class="review-card-date">12 Únor 2024</div>
+										</div>
+										<img src="img/google.svg" alt="google">
+									</div>
+									<div class="review-card-stars">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+									</div> 
+									<div class="review-card-text">
+										<p>Lenku mohu jen doporučit. Vždy odcházím spokojená s účesem, odpočatá.</p>
+									</div>
+								</div>
+								<div class="review-card"> <!-- 5.Review -->
+									<div class="review-card-header">
+										<img decoding="async" src="https://lh3.googleusercontent.com/a-/ALV-UjU-yxDmsD5Zu9GZFetRtnLgiRJtweyaoa9MZ-_7YFVRV_D1qNhceg=s120-c-rp-mo-br100" alt="Natálie Komárková">
+										<div class="review-card-details">
+											<div class="review-card-name"> Natálie Komárková </div>
+											<div class="review-card-date">12 Únor 2024</div>
+										</div>
+										<img src="img/google.svg" alt="google">
+									</div>
+									<div class="review-card-stars">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+									</div> 
+									<div class="review-card-text">
+										<p>Prostě úžasné! Přišla jsem s totálně zničenými vlasy a odešla s krásně hebkými, lesklými vlasy bez roztřepených konečků. Po více návštěvách jsou moje vlasy zdravější a delší. Nemůžu vynachválit moc moc doporučuji!!🥰</p>
+									</div>
+								</div>
+								<div class="review-card"> <!-- 6.Review -->
+									<div class="review-card-header">
+										<img decoding="async" src="https://lh3.googleusercontent.com/a/ACg8ocLcr8M-qCsW53bo8Sn4tpXaVodK5JWhuZMa3Np9zTd2Z2l2Nw=s120-c-rp-mo-ba3-br100" alt="Lucie Slavičková">
+										<div class="review-card-details">
+											<div class="review-card-name"> Lucie Slavičková </div>
+											<div class="review-card-date">12 Únor 2024</div>
+										</div>
+										<img src="img/google.svg" alt="google">
+									</div>
+									<div class="review-card-stars">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+										<img src="img/star.svg" alt="star">
+									</div> 
+									<div class="review-card-text">
+										<p>Jsem velmi spokojená. Perfektní melír a střih za příjemnou cenu. Navíc krásně vyfoukané, vlasy dostaly šmrnc a vydrželi několik dní hezké. Doma si to takto nikdy neumím vyfoukat do hladka. Určitě doporučuji!</p>
+									</div>
+								</div>
+							</div>
+							<img src="img/arrow.svg" alt="right arrow" id="right-button">
+						</div>
+						<div class="review-google-text">
+							<b>Google</b> – souhrnné hodnocení <b>5.0</b> z 5,na základě <b>16 hodnocení</b>
+						</div>
+
+
+					<div class="contact">
+                        <div class="contact-left">
+                            <div class="contact-header">
+                                <h2>Kadeřnictví LENA</h2>
+                            </div>
+                            <div class="contact-details">
+                                    <div class="contact-address"><img src="img/map_icon.png" alt=""><a href="https://www.google.com/maps?q=kadernictvi-lena-holasice-66461">nám. Rudé Armády 206, Holasice 664 61</a></div>
+                                    <div class="contact-phone"><a href="tel:+420603756868" data-wplink-edit="true"><img src="img/phone_icon.png" alt=""></a><a href="tel:+420603756868" data-wplink-edit="true">+420 603 756 868</a></div>
+                                    <div class="contact-email"><img src="img/mail_icon.png" alt=""><a href="mailto:kadernictvi@vlasy-lena.cz">kadernictvi@vlasy-lena.cz</a></div>
+                                    <div class="contact-parking">
+                                        <img src="img/parking_icon.png" alt="">
+                                        <p>Parkování je možné přímo před kadeřnictvím.</p>
+                                    </div>
+                                </div>
+                        </div>
+                        <div class="contact-right">
+                            <div style="width: 100%">
+                                <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=n%C3%A1m%C4%9Bst%C3%AD%20Rud%C3%A9%20Arm%C3%A1dy%20206,%20Holasice+(Kade%C5%99nictv%C3%AD%20Lena)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps devices</a></iframe>
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <!--<div class="contact-house">
+                        <img src="img/house.jpg" alt="house">
+                    </div>-->
+
+					
+
+					
 				</div>
 			</div>
 		</main>
