--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-	<!-- Google tag (gtag.js) -->
+	<!-- Google tag (gtag.js)
 	<meta name="google-site-verification" content="jHKw929ceLZ1wCOVfL63R4pESC7MPyJ7yOGIjlHtc8c">
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-73RCR5BDD6"></script>
 	<script>window.dataLayer = window.dataLayer || [];
 		function gtag(){dataLayer.push(arguments);}
 		gtag('js', new Date());
 		gtag('config', 'G-73RCR5BDD6');</script>
-	<!-- /Google tag -->
+	 /Google tag -->
 <head>
 	<body>
 		<header class="main-header">
