--- a/index.html
+++ b/index.html
@@ -317,7 +317,10 @@
                                 </div>
                         </div>
                         <div class="contact-right">
-                            <div style="width: 100%">
+                            <div style="width: 100%;
+										border-radius: 10px;
+										overflow: hidden;
+										box-shadow: 0 0 10px rgba(0, 0, 0, 0.308);">
                                 <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=n%C3%A1m%C4%9Bst%C3%AD%20Rud%C3%A9%20Arm%C3%A1dy%20206,%20Holasice+(Kade%C5%99nictv%C3%AD%20Lena)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps devices</a></iframe>
                             </div>
                         </div>
