--- a/index.html
+++ b/index.html
@@ -38,9 +38,6 @@
 			</div>
 		</header>
 		<main>
-
-
-
 			<div class="content-wrap">
 				<div class="content">
 					<div class="interduciton">
@@ -58,8 +55,7 @@
 							<img src="img/lenka.png" alt="Lenka - majitelka kadeřnictví">
 						</div>
 					</div>
-
-
+					<!-- Logo zakomentované pro zatím
 					<div class="logos">
 						<div class="main-logo">
 							<img src="img/logo_1.webp" alt="Wella">
@@ -72,10 +68,8 @@
 							<img src="img/logo_6.png" alt="revlon">
 							<img src="img/logo_7.png" alt="loreal">
 						</div>
-					</div>
-
-
-					<div class="cenik">
+					</div>-->
+					<div class="cenik" id="cenik">
 						<table>
 							<tbody>
 								<tr>
@@ -150,7 +144,7 @@
 									<td>1400,-</td>
 								</tr>
 								<tr>
-									<td class="has-text-align-left">Přidání Bondaplexu do barvy, melíru atd.</td>
+									<td class="has-text-align-left">Přidání Bondaplexu do barvy</td>
 									<td>od 200,-</td>
 									<td>od 300,-</td>
 								</tr>
@@ -167,9 +161,7 @@
 							</tbody>
 						</table>
 						</div>
-
-
-
+						<div class="review-header"><br><br><h2> Hodnocení zákazníků</h2><b>Google</b> – <b>5.0</b> z 5,na základě <b>16 hodnocení</b></div>
 						<div class="review-container">
 							<img src="img/arrow.svg" alt="right arrow" id="left-button">
 							<div class="review snap-inline">
@@ -296,44 +288,61 @@
 							</div>
 							<img src="img/arrow.svg" alt="right arrow" id="right-button">
 						</div>
-						<div class="review-google-text">
-							<b>Google</b> – souhrnné hodnocení <b>5.0</b> z 5,na základě <b>16 hodnocení</b>
+						<div class="contact" id="contact">
+							<div class="contact-left">
+								<div class="contact-header">
+									<h2>Kadeřnictví LENA</h2>
+								</div>
+								<div class="contact-details">
+										<div class="contact-address"><img src="img/map_icon.png" alt=""><a href="https://www.google.com/maps?q=kadernictvi-lena-holasice-66461">nám. Rudé Armády 206, Holasice 664 61</a></div>
+										<div class="contact-phone">
+											<a href="tel:+420603756868">
+												<img src="img/phone_icon.png" alt="">
+											</a>
+											<a href="tel:+420603756868">
+												<p>+420 603 756 868</p>
+											</a>
+										</div>
+										<div class="contact-email">
+											<a href="mailto:kadernictvi@vlasy-lena.cz">
+												<img src="img/mail_icon.png" alt="">
+											</a>
+											<a href="mailto:kadernictvi@vlasy-lena.cz">
+												<p>kadernictvi@vlasy-lena.cz</p>
+											</a>
+										</div>
+										<div class="contact-parking">
+											<img src="img/parking_icon.png" alt="">
+											<p>Parkování je možné přímo před kadeřnictvím.</p>
+										</div>
+										<div class="contact-openhours">
+											<img src="img/clock_icon.png" alt="">
+											<p><b>Otevírací doba:</b></p>
+										</div>
+										<p>Po - Pá: 8:00 - 18:00</p>
+										<p>Sobota: 8:00 - 12:00</p>
+										<div class="contact-social">
+											<a href="https://www.facebook.com/lenka.zollmanova" target="_blank">
+												<img src="img/facebook_icon.png" alt="">
+											</a>
+											<a href="https://www.instagram.com/lenabeautyhair?utm_source=qr&igsh=MWp4aDVhNnd6ZHYxNA==" target="_blank">
+												<img src="img/instagram_icon.png" alt="">
+											</a>
+											<a href="https://wa.me/420603756868" target="_blank">
+												<img src="img/whatsapp_icon.png" alt="">
+											</a>
+										</div>
+									</div>
+							</div>
+							<div class="contact-right">
+								<div style="width: 100%;
+											border-radius: 10px;
+											overflow: hidden;
+											box-shadow: 0 0 10px rgba(0, 0, 0, 0.308);">
+									<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=n%C3%A1m%C4%9Bst%C3%AD%20Rud%C3%A9%20Arm%C3%A1dy%20206,%20Holasice+(Kade%C5%99nictv%C3%AD%20Lena)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps devices</a></iframe>
+								</div>
+							</div>
 						</div>
-
-
-					<div class="contact">
-                        <div class="contact-left">
-                            <div class="contact-header">
-                                <h2>Kadeřnictví LENA</h2>
-                            </div>
-                            <div class="contact-details">
-                                    <div class="contact-address"><img src="img/map_icon.png" alt=""><a href="https://www.google.com/maps?q=kadernictvi-lena-holasice-66461">nám. Rudé Armády 206, Holasice 664 61</a></div>
-                                    <div class="contact-phone"><a href="tel:+420603756868" data-wplink-edit="true"><img src="img/phone_icon.png" alt=""></a><a href="tel:+420603756868" data-wplink-edit="true">+420 603 756 868</a></div>
-                                    <div class="contact-email"><img src="img/mail_icon.png" alt=""><a href="mailto:kadernictvi@vlasy-lena.cz">kadernictvi@vlasy-lena.cz</a></div>
-                                    <div class="contact-parking">
-                                        <img src="img/parking_icon.png" alt="">
-                                        <p>Parkování je možné přímo před kadeřnictvím.</p>
-                                    </div>
-                                </div>
-                        </div>
-                        <div class="contact-right">
-                            <div style="width: 100%;
-										border-radius: 10px;
-										overflow: hidden;
-										box-shadow: 0 0 10px rgba(0, 0, 0, 0.308);">
-                                <iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=n%C3%A1m%C4%9Bst%C3%AD%20Rud%C3%A9%20Arm%C3%A1dy%20206,%20Holasice+(Kade%C5%99nictv%C3%AD%20Lena)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps devices</a></iframe>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <!--<div class="contact-house">
-                        <img src="img/house.jpg" alt="house">
-                    </div>-->
-
-					
-
-					
 				</div>
 			</div>
 		</main>
@@ -341,39 +350,6 @@
 			<p>&copy; 2025 Kadeřnictví Lena. Všechna práva vyhrazena.</p>
 		</footer>
 	</body>
-	<script>
-		document.getElementById('left-button').addEventListener('click', function() {
-			document.querySelector('.review').scrollBy({
-				left: -300,
-				behavior: 'smooth'
-			});
-		});
-	
-		document.getElementById('right-button').addEventListener('click', function() {
-			document.querySelector('.review').scrollBy({
-				left: 300,
-				behavior: 'smooth'
-			});
-		});
-		document.getElementById('ham').addEventListener('click', function() {
-			const menu = document.querySelector('.right-side ul');
-				menu.style.display = 'flex';
-			const ham = document.querySelector('.ham');
-				ham.style.display = 'none';
-			const header = document.querySelector('.main-header');
-			header.style.flexDirection = 'column';
-			const cross = document.querySelector('.cross');
-			cross.style.display = 'block';
-		});
-		document.getElementById('cross').addEventListener('click', function() {
-			const menu = document.querySelector('.right-side ul');
-				menu.style.display = 'none';
-			const ham = document.querySelector('.ham');
-				ham.style.display = 'block';
-			const header = document.querySelector('.main-header');
-			header.style.flexDirection = 'row';
-			const cross = document.querySelector('.cross');
-			cross.style.display = 'none';
-		});
-	</script>
+	<script src="js/review.js"></script>
+	<script src="js/hamburger_menu.js"></script>
 </html>
