--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 											border-radius: 10px;
 											overflow: hidden;
 											box-shadow: 0 0 10px rgba(0, 0, 0, 0.308);">
-									<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=100%25&amp;height=350&amp;hl=en&amp;q=n%C3%A1m%C4%9Bst%C3%AD%20Rud%C3%A9%20Arm%C3%A1dy%20206,%20Holasice+(Kade%C5%99nictv%C3%AD%20Lena)&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"><a href="https://www.gps.ie/">gps devices</a></iframe>
+									<iframe width="100%" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m16!1m10!1m3!1d8790.445327875857!2d16.601856156788642!3d49.07875301995959!2m1!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4712c11ac8d6bf6d%3A0xe941874cc9098d90!2zS2FkZcWZbmljdHbDrSBMZW5h!5e0!3m2!1scs!2sus!4v1736537124090!5m2!1scs!2sus"><a href="https://www.gps.ie/">gps devices</a></iframe>
 								</div>
 							</div>
 						</div>
